--- a/package.json
+++ b/package.json
@@ -1,19 +1,24 @@
 {
   "name": "@remvst/raycaster",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "description": "Raycaster",
   "main": "src/raycaster.js",
   "scripts": {
-    "test": "./node_modules/jasmine/bin/jasmine.js",
-    "coverage": "istanbul cover ./node_modules/jasmine/bin/jasmine.js"
+    "test": "ts-node node_modules/jasmine/bin/jasmine --config=spec/support/jasmine.json",
+    "coverage": "nyc -r lcov -e .ts -x \"spec/**/*.spec.ts\" npm run test",
+    "build": "tsc"
   },
   "author": "",
   "license": "UNLICENSED",
   "dependencies": {
-    "@remvst/matrix": "^1.0.0"
+    "@remvst/matrix": "^2.0.1"
   },
   "devDependencies": {
+    "@types/jasmine": "^3.6.2",
     "istanbul": "^0.4.5",
-    "jasmine": "^3.4.0"
+    "jasmine": "^3.4.0",
+    "jasmine-ts": "^0.3.0",
+    "typescript": "^4.1.3",
+    "ts-node": "^9.1.1"
   }
 }
