--- a/package.json
+++ b/package.json
@@ -1,24 +1,23 @@
 {
   "name": "@remvst/raycaster",
-  "version": "2.0.3",
+  "version": "2.0.4",
   "description": "Raycaster",
   "main": "lib/raycaster.js",
   "scripts": {
     "test": "ts-node node_modules/jasmine/bin/jasmine --config=spec/support/jasmine.json",
     "coverage": "nyc -r lcov -e .ts -x \"spec/**/*.spec.ts\" npm run test",
-    "build": "tsc"
+    "build": "rm -rf lib && tsc",
+    "prepublishOnly": "npm i && npm run build"
   },
-  "author": "",
+  "author": "Rémi Vansteelandt",
   "license": "UNLICENSED",
   "dependencies": {
-    "@remvst/matrix": "^2.0.1"
+    "@remvst/matrix": "^2.0.3",
+    "typescript": "^4.1.3"
   },
   "devDependencies": {
     "@types/jasmine": "^3.6.2",
-    "istanbul": "^0.4.5",
     "jasmine": "^3.4.0",
-    "jasmine-ts": "^0.3.0",
-    "typescript": "^4.1.3",
     "ts-node": "^9.1.1"
   }
 }
