--- a/tsconfig.cjs.json
+++ b/tsconfig.cjs.json
@@ -1,15 +1,10 @@
 {
-    "ts-node": {
-        "compilerOptions": {
-            "module": "commonjs"
-        }
-    },
     "compilerOptions": {
         "target": "es2019",
-        "module": "ESNext",
+        "module": "CommonJS",
         "moduleResolution": "node",
         "declaration": true,
-        "outDir": "./lib/esm",
+        "outDir": "./lib/cjs",
         "allowJs": false
     },
     "include": ["src/**/*"],
