--- a/package.json
+++ b/package.json
@@ -2,7 +2,11 @@
   "name": "@remvst/raycaster",
   "version": "3.0.0",
   "description": "Raycaster",
-  "main": "lib/raycaster.js",
+  "main": "lib/cjs/index.js",
+  "exports": {
+      "require": "./lib/cjs/index.js",
+      "import": "./lib/esm/index.js"
+  },
   "scripts": {
     "test": "ts-node node_modules/jasmine/bin/jasmine --config=spec/support/jasmine.json",
     "coverage": "nyc -r lcov -e .ts -x \"spec/**/*.spec.ts\" npm run test",
